<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab2</string>
    <string name="cooldown">Cooldown</string>
    <string name="loc">Language</string>
    <string name="sets">Sets</string>
    <string name="cycles">Cycles</string>
    <string name="rest">Rest</string>
    <string name="name">Name</string>
    <string name="workout">Workout</string>
    <string name="color">Color</string>
    <string name="warm_up">WarmUp</string>
    <string name="add">Add</string>
    <string name="nameHeader">Name:</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="day_night_theme">Night mode</string>
    <string name="font_size">Font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="change_language">Change language</string>
    <string name="delete_all">Delete all</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="tabata_timer">Tabata Timer</string>
</resources>