<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FF4242"
    app:cardElevation="5dp"
    app:contentPadding="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    android:id="@+id/rowLayout"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/btnPlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textWarmUp0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/warm_up"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <TextView
            android:id="@+id/textWarmUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textWarmUp0"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <TextView
            android:id="@+id/textWorkOut0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/workout"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWarmUp0" />

        <TextView
            android:id="@+id/textWorkOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="10sp"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toRightOf="@id/textWorkOut0"
            app:layout_constraintTop_toBottomOf="@+id/textWarmUp" />

        <TextView
            android:id="@+id/textRest0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/rest"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkOut0" />

        <TextView
            android:id="@+id/textRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textRest0"
            app:layout_constraintTop_toBottomOf="@+id/textWorkOut" />

        <TextView
            android:id="@+id/textCoolDown0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/cooldown"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRest0" />

        <TextView
            android:id="@+id/textCoolDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textCoolDown0"
            app:layout_constraintTop_toBottomOf="@+id/textRest" />

        <TextView
            android:id="@+id/textCycles0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/cycles"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCoolDown0" />

        <TextView
            android:id="@+id/textCycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textCycles0"
            app:layout_constraintTop_toBottomOf="@+id/textCoolDown" />

        <TextView
            android:id="@+id/textSets0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/sets"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCycles0" />

        <TextView
            android:id="@+id/textSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textSets0"
            app:layout_constraintTop_toBottomOf="@+id/textCycles" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
